--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@dawiidio/reactive-store",
   "version": "0.0.1",
   "description": "Ractive store with RxJS for React",
-  "main": "./lib/index.js",
+  "main": "./lib/index.jsx",
+  "typings": "./index.d.ts",
   "author": "Dawid Wojda <dawiidio@gmail.com>",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
@@ -43,6 +44,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.7.6",
     "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-module-resolver": "^3.1.1",
