--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react-reactive-store",
+  "name": "@_dawiidio/react-rx-store",
   "version": "0.1.1",
   "description": "Ractive store with RxJS for React",
   "main": "./lib/index.js",
   "typings": "./src/index.d.ts",
   "types": "./src/index.d.ts",
+  "private": false,
   "files": [
     "lib/index.js",
     "src/index.d.ts",
